[package]
name = "kasm"
description = "kasm (is) Another Submission Multitool"
version = "0.2.0"
edition = "2021"
authors = ["kernzerfall <me@georgar.de>"]
license = "EUPL-1.2-or-later"

[profile.release]
strip = true
opt-level = "z" # We can afford -Oz since the binary is "fast enough" anyway
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.8.1"
serde = { version = "1.0.162", features = ["serde_derive", "derive"] }
strum = { version = "0.24.1", features = ["derive"] }
toml = "0.7.3"
zip = { version = "0.6.4", default-features = false, features = ["deflate", "time"] }
