[package]
name = "kasm"
description = "kasm (is) Another Submission Multitool"
version = "1.0.0"
edition = "2021"
authors = ["kernzerfall <me@georgar.de>"]
license = "EUPL-1.2-or-later"

[profile.release]
strip = true
opt-level = "z" # We can afford -Oz since the binary is "fast enough" anyway
lto = true

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
inquire = "0.6.2"
keyring = "2.0.2"
log = "0.4.17"
pretty_env_logger = "0.5.0"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = { version = "1.0.162", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
strum = { version = "0.25", features = ["derive"] }
toml = "0.8"
whoami = "1.4.0"
zip = { version = "0.6.4", default-features = false, features = ["deflate", "time"] }
